<resources>
    <string name="app_name">ScheduleReward</string>
    <string name="admin">Admin</string>
    <string name="login_id">Login ID</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="pwd">pwd</string>
    <string name="pwd_re">Re-enter password</string>
    <string name="pwd_4">4 digits</string>

    <string name="login_id_noexist">ID does not exist.</string>
    <string name="wrong_pwd">password is wrong.</string>
    <string name="new_sched">new schedule</string>
    <string name="admin_sched">schedule</string>
    <string name="admin_man">personnel</string>
    <string name="sum">accounting</string>
    <string name="rew">reward</string>
    <!--string name="one_day_rew">일일보상</string-->
    <string name="input_rew">Please enter your reward</string>
    <string name="admin_rew">coupons</string>
    <!--string name="add_rew">보상 아이템 추가</string-->      <!-- 하루보상 추가 -->
    <!--string name="rew_item">보상아이템</string-->
    <string name="give_coup">issue coupons</string>
    <!--string name="rew_time">보상시간</string>
    <string name="sel_rew">보상일 경우 선택</string-->    <!-- 일일보상일 경우 선택 -->
    <!--string name="skip">건너뛰기</string>
    <string name="times">번 가능</string-->

    <string name="gohome">H</string>
    <string name="sched_title">Schedule title</string>
    <string name="addlink">add content link</string>
    <string name="link_note">content</string>
    <string name="input_link">fill the linked-content</string>
    <!--string name="no_select">no 버튼 추가</string-->
    <string name="picture_select">add-picture</string>
    <string name="picture">add-picture</string>
    <string name="seq">sequence</string>
    <string name="link">linked-content</string>


    <string name="score">score</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="delete">del</string>
    <string name="complete">complete</string>
    <!--string name="no_exist">No 버튼 있음</string-->
    <string name="pic_exist">add-picture</string>
    <string name="score1">score : </string>
    <string name="sc_detail1">schedule execute history</string>
    <string name="sum_enter">[ Enter the score you want to use and press Enter ]</string>
    <string name="sum_enter1">[ Enter the bonus score and press Enter ]</string>

    <string name="sel_coupon">Choose the coupon you want to use.</string>
    <string name="y">Yes</string>
    <string name="n">No</string>


    <string name="oneday">my coupons</string>

    <string name="sum_current">total score</string>
    <!--string name="input_small">현재누적점수보다 같거나 작은값을 입력해주세요</string-->
    <!--string name="per_score"> </string>
    <string name="omit">[ 위 점수 항목은 생략 가능합니다 ]</string-->

    <string name="sel_daytime">select days/times</string>
    <string name="mod_daytime">modify days/times요일 시간 수정</string>

    <string name="mon">mo</string>
    <string name="tue">tu</string>
    <string name="wed">we</string>
    <string name="thu">th</string>
    <string name="fri">fr</string>
    <string name="sat">sa</string>
    <string name="sun">su</string>
    <string name="select_day">select days and times.</string>
    <string name="select_time">select times.</string>
    <string name="s_time">select start time.</string>
    <string name="e_time">select end time.</string>
    <string name="s_time1">start time</string>
    <string name="e_time1">end time</string>
    <string name="time_again">end time must be later than star time. Re-enter please.</string>
    <!--string name="dt_again">하루이상 시간을 설정하세요.</string-->
    <string name="save_sched">Schedule has been saved.</string>
    <string name="new_man">new person</string>
    <string name="take_picture">Camera</string>
    <string name="ch_album">Album</string>
    <!--string name="bonus">보너스</string>
    <string name="inp_loginid">로그인 아이디를 입력하고 엔터를 치세요.</string-->
    <string name="input_man">Input a new person.</string>
    <string name="mod_man">Change a photo</string>
    <string name="del_man">Will you delete this person?</string>
    <string name="del_ms">delete from schedule?</string>
    <string name="pwd_ch">modify pwd</string>
    <string name="q_pwd_ch">Will you modify password?</string>

    <string name="add_sc">bonus points</string>
    <string name="sub_sc">minus score</string>
    <string name="lid_again">This name already exists. Use another name please.</string>
    <string name="saved">saved</string>
    <string name="regi_man">new person</string>
    <string name="regist">registration</string>
    <string name="search">search</string>
    <string name="select">selection</string>
    <string name="reg_before">already registered</string>
    <string name="name_enter">[search]input a name/enter</string>
    <string name="ID_enter">input a name/enter</string>
    <string name="pwd_enter">input a password/enter</string>

    <string name="select_mans">select people for this schedule.</string>
    <string name="no_man">person no exist</string>
    <string name="my_scheds">my schedule list</string>
    <string name="right_now_scheds">schedule for now</string>
    <string name="add_picture">camera</string>
    <string name="go_mypage">MyPage</string>
    <string name="gain"> You won!</string>
    <string name="date">date</string>
    <string name="d_time">date and time</string>
    <string name="sched">schedule</string>
    <string name="used_score">used score</string>
    <string name="m_save">update</string>
    <string name="modify">modify</string>
    <string name="del_s">delete sched.</string>
    <string name="modified">modified</string>
    <string name="deleted">deleted</string>
    <string name="sc_detail">MOD schedule</string>
    <string name="del_sc">Will you delete this schedule?</string>
    <string name="to">To : </string>
    <string name="coup">coupons</string>
    <string name="publish">issue</string>
    <string name="pub_cp">Will you issue coupons?</string>
    <string name="input_cp">Input a coupon to issue.</string>

    <string name="db_insert_error">insert or update error</string>
    <string name="add_sched_atom">Add schedule atom</string>
    <string name="check_name">same name exist error</string>
    <string name="box_length">box length</string>
    <string name="box_unit">box unit</string>
    <string name="box_default">box default value</string>
    <string name="unit">times</string>
    <string name="skd_atom">about schedule atom</string>
    <string name="formula">create formula \n[for example : (100-a)*0.8 + 5 * b + c ]</string>
    <string name="input_atom">input a atom please.</string>
    <string name="input_formula">input formula please.</string>
    <string name="add_if">add if</string>
    <string name="cancle_if">cancle if</string>
    <string name="time_over">time is over.</string>
    <string name="no_sched_link">no schedule link </string>
    <string name="sel_reward_type">select reward type</string>
    <string name="simple_rew">simple reward</string>
    <string name="if_formula_rew">due to performance condition</string>
    <string name="no_rew">no reward</string>
    <string name="cash">cash</string>
    <string name="coupon">coupon</string>
    <string name="ok">Ok</string>
    <string name="state_0_title">This schedule on the modification step is not shown to users.</string>
    <string name="state_0_content">content is empty or the reward value is not completed.</string>
    <string name="working">on work</string>
    <string name="del_link">Will you delete this linked-content?</string>
    <string name="del_link_title">delete link-content</string>
    <string name="regi_new_coupon">register a new coupon</string>
    <string name="add">add</string>
    <string name="add_coupon">add a coupon</string>
    <string name="ask_new_coupon">Will you add a new coupon?</string>
    <string name="ea">ea.</string>
    <string name="won">$</string>
    <string name="input_won">enter cashes.</string>
    <string name="input_coupon">add coupons.</string>
    <string name="execute_during_time">execute_during_time</string>
    <string name="start">from</string>
    <string name="till">till</string>
    <string name="hour">hour(0 ~ 23)</string>
    <string name="minute">minute</string>
    <string name="edt_description1">till(ending time) must have bigger value than from(start time). and the max value of till time is 23h 59minute.</string>
    <string name="edt_description2">ex. cash is 1$ and executed till from time, 1$ is given as reward, and after till time the reward is 0 value.
        in the meantime, proportional cuts are made.</string>
    <string name="input_edt">fill in theexecute_during_time values.</string>
    <string name="one_time">One time</string>
    <string name="periodically">Periodically</string>
    <string name="once_a_month">Once a month, on the </string>
    <string name="or">or</string>
    <string name="first_day"> first day </string>
    <string name="last_day">last day </string>
    <string name="fixed_day">fixed day</string>
    <string name="rd">rd</string>
    <string name="coupon_name">coupon name</string>
    <string name="coupon_exist">The coupon already exists.</string>
    <string name="regi_coupon">register a coupon.</string>
    <string name="regi_man1">register a person.</string>
    <string name="cpb_periodical">issue coupons periodically</string>
    <string name="select_belows">select days to issue below.\n ex. if you want everyday, select every check box of days.</string>
    <string name="day">day</string>
    <string name="select1">select</string>
    <string name="coupons">your coupons</string>
    <string name="del_periodCP">cancel periodical coupon issue</string>
    <string name="query_cancel_periodCP">Will you cancel this coupon issues periodically?</string>
    <string name="yes">yes</string>
    <string name="noo">no</string>
    <string name="period_cp_error">error to issue periodical coupons</string>
    <string name="giveCPfailed">failed to issue coupons. </string>
    <string name="period_day">periodical day</string>
    <string name="use_coupon"> Will you use this coupon?</string>
    <string name="used_coupon">You used coupon.</string>
    <string name="sum_history">history of score</string>
    <string name="cp_history">history of coupons</string>
    <string name="content">content</string>
    <string name="modify_link">modify link-content</string>
    <string name="pwd_on">password-on</string>
    <string name="pwd_off">password-off</string>
    <string name="state_pwd">Will you change the on/off state of password?</string>
    <string name="pwd_oned">password is on.</string>
    <string name="pwd_offed">password is off.</string>
    <string name="fail">failed</string>
    <string name="pwd_manage">managing passwords</string>
    <string name="t_state_pwd">change the on/off state of password</string>
    <string name="new_pwd">new password</string>
    <string name="enter_pwd">enter password</string>
    <string name="state">state</string>
    <string name="price_ea">price ea.</string>
    <string name="close">close</string>
    <string name="deleted_sch">schedule deleted.</string>
</resources>