<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/admin_sched"
        android:textSize="40sp"
        android:background="@drawable/picture"
        android:onClick="onAdSc"
        android:layout_marginBottom="45dp" android:gravity="center"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/admin_man"
        android:textSize="40sp"
        android:onClick="onAdMan"
        android:background="@drawable/picture"
        android:layout_marginBottom="45dp" android:gravity="center"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:onClick="onAdSum"
        android:textSize="40sp"
        android:background="@drawable/picture"
        android:layout_marginBottom="45dp" android:gravity="center"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/admin_rew"
        android:onClick="onAdCoupon"
        android:textSize="40sp"
        android:background="@drawable/picture"
        android:layout_marginBottom="45dp" android:gravity="center"/>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:text="@string/logout"
            android:onClick="onLogout"
            android:textSize="20sp"
            android:background="@drawable/picture1"
            android:gravity="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="5dp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:text="@string/pwd_ch"
            android:onClick="onPwdCh"
            android:textSize="22sp"
            android:background="@drawable/picture1"
            android:gravity="center"
            android:padding="10dp"/> </LinearLayout>
</LinearLayout>