<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center">
<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwd"
        android:textSize="15sp"
        android:padding="15dp"
        />
        <EditText
            android:id="@+id/pwd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:hint="@string/pwd_4"
            android:inputType="numberPassword"/>
    </TableRow>
    <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwd_re"
        android:textSize="15sp"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/pwd1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:maxLength="4"
        android:inputType="numberPassword"/>
</TableRow>
</TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp">
        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="onPwdSave"
            android:background="@drawable/button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginRight="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="onCancel"
            android:background="@drawable/button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"/>
    </LinearLayout>
</LinearLayout>