<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding = "20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/link_note"
            />
        <EditText
            android:id="@+id/link_note"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxLength="100"/>
    <!--Switch
        android:id="@+id/no_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_select"
        android:textSize="17sp"
        android:padding="10dp"/-->
    <Switch
        android:id="@+id/pic_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture_select"
        android:textSize="17sp"
        android:padding="10dp"/>
    <LinearLayout
        android:id="@+id/score_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="17sp"/>
        <EditText
            android:id="@+id/score"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:inputType="number"
            android:textSize="17sp"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:visibility="gone"
            android:background="@drawable/button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onSaveLinkClicked"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginRight="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onDialogCancelClicked"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"/>
    </LinearLayout>
</LinearLayout>