<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding = "20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/link_note"
            />
        <EditText
            android:id="@+id/link_note"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxLength="100"/>
    <!--Switch
        android:id="@+id/no_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_select"
        android:textSize="17sp"
        android:padding="10dp"/-->
    <Switch
        android:id="@+id/pic_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture_select"
        android:textSize="17sp"
        android:padding="10dp"/>
    <LinearLayout
        android:id="@+id/score_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="17sp"/>
        <EditText
            android:id="@+id/score"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:inputType="number"
            android:textSize="17sp"
            android:padding="5dp"/>
    </LinearLayout>
    <include layout="@layout/dialog_save_gone_linear" />
</LinearLayout>