<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <TextView
        android:id="@+id/seq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:text="@string/link_note"
        />
    <EditText
        android:id="@+id/link_note"
        android:layout_width="200dp"
        android:layout_marginLeft="6dp"
        android:layout_height="wrap_content"
        android:maxLength="100"/>
    <Switch
        android:id="@+id/pic_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture_select"
        android:textSize="15sp"
        android:padding="10dp"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sel_reward_type"/>

    <Spinner
        android:id="@+id/reward_type"
        android:entries="@array/sel_rew_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ></Spinner></LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/formula_layout"/>
        <include layout="@layout/simple_rew_layout"/>
        <include layout="@layout/execute_during_time"/>
    </FrameLayout>
    <include layout="@layout/dialog_save_gone_linear"
        android:id="@+id/dialog_save_gone_linear"/>



</LinearLayout>
